# prediction-market

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js
agent/: .eslintrc.json  .gitignore  .npmrc  README.md  drizzle.config.ts  langgraph.json  package.json  pnpm-lock.yaml  tsconfig.json
agent/drizzle/: 0000_brief_scarlet_spider.sql  0001_public_mesmero.sql  0002_petite_master_chief.sql  0003_glorious_miek.sql
agent/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
agent/src/: dev.ts  graph.ts  index.ts
agent/src/agent/: betExtracterAgent.ts  betValidityAgent.ts  cryptoPriceBetAgent.ts  politicsRelatedBetAgent.ts  priceAgent.ts  readAgent.ts  resolverAgent.ts
agent/src/anchor-types/: pm_amm.ts
agent/src/db/: schema.ts
agent/src/prompt/: resolverAgentPromptToParse.ts
agent/src/router/: extractorRouter.ts
agent/src/tools/: getOHLC.ts  getPrice.ts  getUnixTimestamp.ts
agent/src/utils/: model.ts  (+4 more)
anchor/: Anchor.toml
anchor/programs/pm_amm/: Cargo.toml
anchor/programs/pm_amm/src/: error.rs  lib.rs  utils.rs
anchor/programs/pm_amm/src/instructions/: buy.rs  create_bet.rs  get_price.rs  init.rs  init_bet.rs  mod.rs  sell.rs  settle_bet.rs  withdraw_post_settle.rs
anchor/programs/pm_amm/src/state/: admin.rs  bet.rs  mod.rs
anchor/scripts/: config.ts  init_admin.ts  resolve_bet.ts
anchor/src/: index.ts  pm_amm-exports.ts
anchor/tests/: native-test.spec.ts  pm_amm.spec.ts
src/: utils.ts
src/app/: globals.css  layout.tsx  page.tsx
(+14 files in other folders)
